# sros-enable-netconf

./: .gitignore  Dockerfile  LICENSE  README.md  enable-netconf-netboxapi.py  enable-netconf.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-app.yml
Configs/R1-Sandbox/: R1-Sandbox.txt
Configs/R2-Sandbox/: R2-Sandbox.txt
Configs/RCKLCAIGT2A-P-AL-7750-039488-H2/: RCKLCAIGT2A-P-AL-7750-039488-H2.txt
Configs/vSIM/: vSIM.txt
sros_enable_netconf/: __init__.py  enable-netconf.py  enable_netconf.py  helpers.py
tests/: test_sros_enable_netconf.py
tests/unit/: test_sros_enable_netconf.py
